--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="autumn">
   <head>
     <meta charset="utf-8" />
     <title>MiniInventoryTracker</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <html data-theme="luxury"></html>
   </head>
   <body>
     <app-root></app-root>
