--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="autumn">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>MiniInventoryTracker</title>
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
+  <script defer src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
+  <!-- in <head> -->
+
   <body>
     <app-root></app-root>
   </body>
